// ----------------------------------------------------------------------------
// File: ConsoleMdReply.proto
// Author: Ivan Arizanovic <ivan.arizanovic@comtrade.com>
// ----------------------------------------------------------------------------
syntax="proto3";
package eos.console;

import "ConsoleReply.proto";

//------------------------------------------------------------------------------
// Reply message sent to the client
//------------------------------------------------------------------------------
message StreamReplyProto {
  ReplyProto realtime_output = 1;
}
